[gd_scene load_steps=9 format=3 uid="uid://ywrv2mhwrmti"]

[ext_resource type="Script" path="res://Scripts/stone_2d.gd" id="1_ff1r1"]
[ext_resource type="Texture2D" uid="uid://b11cb0cao1ady" path="res://Sprites/Test/Test_Rock.PNG" id="2_u61no"]
[ext_resource type="AudioStream" uid="uid://d3bsskllpcbfo" path="res://Audio/stone_hit.wav" id="3_4cvwm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g8h2g"]
size = Vector2(25, 19)

[sub_resource type="Animation" id="Animation_o5cmf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_isq61"]
resource_name = "grain_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_s0b3a"]
resource_name = "stone_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yksgk"]
_data = {
"RESET": SubResource("Animation_o5cmf"),
"grain_hit": SubResource("Animation_isq61"),
"stone_hit": SubResource("Animation_s0b3a")
}

[node name="Stone" type="Area2D"]
z_as_relative = false
y_sort_enabled = true
position = Vector2(232, 94)
collision_layer = 0
collision_mask = 256
script = ExtResource("1_ff1r1")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_as_relative = false
y_sort_enabled = true
position = Vector2(-1.90735e-06, -11)
scale = Vector2(0.0736175, 0.0736175)
texture = ExtResource("2_u61no")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_g8h2g")

[node name="PunchTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_yksgk")
}
speed_scale = 4.0

[node name="StoneHitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4cvwm")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="PunchTimer" to="." method="_on_punch_timer_timeout"]
